# geotransform

./: .bumpversion.cfg  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CITATION.cff  Pipfile  README.md  README.rst  dodo.py  flake.nix  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tasks.py  tox.ini
.github/workflows/: publish-to-test-pypi.yml  test-and-publish-doit.yaml  test-with-nox.yml  test-with-tox.yml
docs/: .buildinfo  conf.py  genindex.html  index.html  index.md  index.rst  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html  usage.md
docs/.doctrees/: environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/_sources/: installation.md.txt  usage.md.txt
docs/apidoc/: geotrans.cli.html  geotrans.html  geotrans.modify.html  geotrans.transform.html  modules.html
docs_html/: index.html  installation.html  objects.inv  search.html  searchindex.js  usage.html
docs_html/.doctrees/: environment.pickle  usage.doctree
docs_html/_sources/: index.md.txt  usage.md.txt
docs_src/: conf.py  index.md  index.rst  installation.md  requirements.txt  usage.md
docs_src/apidoc/: geotrans.rst  geotrans.transform.rst
examples/: README.rst
geotrans/: __init__.py  __main__.py  cli.py  modify.py  transform.py
tests/: __init__.py  _profile.py  test_cli.py  test_transform.py
tests/data/: Hastholmen_LiDAR_lineaments.geojson  KL5_tulkinta.dbf  KL5_tulkinta.shp  KL5_tulkinta.shp.xml  KL5_tulkinta.shx  OG1_tulkinta_filtered_5m.gpkg  OG4_fractures_ML_filtered_5m.gpkg  Two_Layer_Geopackage_OG6_OG7.gpkg  branches_cropped_Domain_IIId.dbf  branches_cropped_Domain_IIId.prj  branches_cropped_Domain_IIId.shp  (+1 more)
(+46 files in other folders)
