[tool.poetry]
name = "geotrans"
version = "0.0.4.post5.dev0+602fe7a"
description = "Switch between spatial fileformats."
authors = ["nialov <nikolasovaskainen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

geopandas = "*"
click = "*"

# Extras
# Coverage
coverage = {version = "*", optional = true}
coverage-badge = {version = "*", optional = true}

# Docs
sphinx = {version = "*", optional = true}
sphinx-rtd-theme = {version = "*", optional = true}
nbsphinx = {version = "*", optional = true}

# Linting and formatting
pylint = {version = "*", optional = true}
rstcheck = {version = "*", optional = true}
black = {version = "*", optional = true}
black-nb = {version = "*", optional = true}
isort = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
nox = "*"
invoke = "*"
jupyterlab = "*"
ipython = "*"
pytest = "*"

[tool.poetry.extras]
coverage = ["coverage", "coverage-badge"]
docs = ["sphinx", "sphinx-rtd-theme", "nbsphinx"]
format-lint = ["pylint", "rstcheck", "sphinx", "black", "black-nb", "isort"] 

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.pytest.ini_options]
testpaths =[
    "tests",
    "geotrans",
    ]
addopts = "--doctest-modules --pdbcls=IPython.terminal.debugger:Pdb"
doctest_optionflags =[
    "NUMBER",
    "NORMALIZE_WHITESPACE",
    ]

filterwarnings =[]

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["geotrans", "tests"]

[tool.pylint.report]
output-format = "text"

[tool.pylint.messages_control]
max-line-length = 100
disable = "C0103"
